# backend/docs/swagger.json
@@ -1608,6 +1608,23 @@
                 }
             }
         },
+        "models.UserBasicInfo": {
+            "type": "object",
+            "properties": {
+                "avatar_url": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "models.WorkoutSessionResponse": {
             "type": "object",
             "properties": {
@@ -1634,6 +1651,9 @@
                     "items": {
                         "$ref": "#/definitions/models.Set"
                     }
+                },
+                "user": {
+                    "$ref": "#/definitions/models.UserBasicInfo"
                 }
             }
         }
